force-app/main/default/objects/Data_Validation_Master_Data__c/Data_Validation_Master_Data__c.object-meta.xml
<CustomObject>
    <description>This object contains the master data for partner onboarding.</description>
    <label>Data Validation Master Data</label>
    <nameField>
        <displayFormat>MDM-{0000}</displayFormat>
        <label>MDM ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Validation Master Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>