force-app/main/default/objects/Data_Validation_Master_Data__c/fields/Deal_Registration__c.field-meta.xml
<CustomField>
    <fullName>Deal_Registration__c</fullName>
    <label>Deal Registration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>