force-app/main/default/objects/Data_Validation_Master_Data__c/fields/GPU_Genius__c.field-meta.xml
<CustomField>
    <fullName>GPU_Genius__c</fullName>
    <label>GPU Genius</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>ELITE_CZ:5118534</fullName>
            </value>
            <value>
                <fullName>ELITE_DE:4565552</fullName>
            </value>
            <value>
                <fullName>ELITE_ES:4565563</fullName>
            </value>
            <value>
                <fullName>ELITE_FR:4565545</fullName>
            </value>
            <value>
                <fullName>ELITE_IT:4565568</fullName>
            </value>
            <value>
                <fullName>ELITE_PL:4565571</fullName>
            </value>
            <value>
                <fullName>ELITE_TR:5118539</fullName>
            </value>
            <value>
                <fullName>ELITE_UK:4565542</fullName>
            </value>
            <value>
                <fullName>HP:105395</fullName>
            </value>
            <value>
                <fullName>IBM:105791</fullName>
            </value>
            <value>
                <fullName>Learning Dell:4657800</fullName>
            </value>
            <value>
                <fullName>Learning EMEAI NVEP:4995860</fullName>
            </value>
            <value>
                <fullName>Learning GRID:2965513</fullName>
            </value>
            <value>
                <fullName>Learning GRID Restricted:4980382</fullName>
            </value>
            <value>
                <fullName>Learning GRID VCA:2970917</fullName>
            </value>
            <value>
                <fullName>Learning NPN Community:4997879</fullName>
            </value>
            <value>
                <fullName>Learning Quadro:4320588</fullName>
            </value>
            <value>
                <fullName>Learning TPP:3200491</fullName>
            </value>
            <value>
                <fullName>Lenovo:520995</fullName>
            </value>
            <value>
                <fullName>NPN DGX Sales:5642759</fullName>
            </value>
            <value>
                <fullName>NPN DGX Technical:5642760</fullName>
            </value>
            <value>
                <fullName>NPN Quadro Sales:5642757</fullName>
            </value>
            <value>
                <fullName>NPN Quadro Technical:5642758</fullName>
            </value>
            <value>
                <fullName>NPN Tesla Sales:5642753</fullName>
            </value>
            <value>
                <fullName>NPN Tesla Technical:5642754</fullName>
            </value>
            <value>
                <fullName>NPN vGPU Sales:5642755</fullName>
            </value>
            <value>
                <fullName>NPN vGPU Technical:5642756</fullName>
            </value>
            <value>
                <fullName>NSC:234133</fullName>
            </value>
            <value>
                <fullName>PNY:2531912</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>