force-app/main/default/objects/Data_Validation_Master_Data__c/fields/MDF_No_MDF__c.field-meta.xml
<CustomField>
    <fullName>MDF_No_MDF__c</fullName>
    <label>MDF No MDF</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No MDF</fullName>
            </value>
            <value>
                <fullName>MDF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>