force-app/main/default/objects/Data_Validation_Master_Data__c/fields/Partner_Competency__c.field-meta.xml
<CustomField>
    <fullName>Partner_Competency__c</fullName>
    <label>Partner Competency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tesla Elite</fullName>
            </value>
            <value>
                <fullName>Tesla Preferred</fullName>
            </value>
            <value>
                <fullName>vGPU Elite</fullName>
            </value>
            <value>
                <fullName>vGPU Preferred</fullName>
            </value>
            <value>
                <fullName>Quadro Elite</fullName>
            </value>
            <value>
                <fullName>Quadro Preferred</fullName>
            </value>
            <value>
                <fullName>DGX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>