force-app/main/default/objects/Data_Validation_Master_Data__c/fields/Permissions_and_Group_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Permissions_and_Group_Assignment__c</fullName>
    <label>Permissions and Group Assignment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Deal Registration</fullName>
            </value>
            <value>
                <fullName>DGX Full Portal</fullName>
            </value>
            <value>
                <fullName>DISTI DGX Elite</fullName>
            </value>
            <value>
                <fullName>DISTI DGX Preferred</fullName>
            </value>
            <value>
                <fullName>DISTI Quadro Elite</fullName>
            </value>
            <value>
                <fullName>DISTI Quadro Preferred</fullName>
            </value>
            <value>
                <fullName>DISTI Tesla Elite</fullName>
            </value>
            <value>
                <fullName>DISTI Tesla Preferred</fullName>
            </value>
            <value>
                <fullName>DISTI vGPU Elite</fullName>
            </value>
            <value>
                <fullName>DISTI vGPU Preferred</fullName>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>GRID VCA Legacy</fullName>
            </value>
            <value>
                <fullName>GRID VGX Legacy</fullName>
            </value>
            <value>
                <fullName>IP Portal Lite</fullName>
            </value>
            <value>
                <fullName>IP Tesla Elite</fullName>
            </value>
            <value>
                <fullName>IP Tesla Preferred</fullName>
            </value>
            <value>
                <fullName>Leads &amp; Opportunities</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>MDF</fullName>
            </value>
            <value>
                <fullName>MDFV3</fullName>
            </value>
            <value>
                <fullName>NVEP</fullName>
            </value>
            <value>
                <fullName>OEM DGX Elite</fullName>
            </value>
            <value>
                <fullName>OEM DGX Preferred</fullName>
            </value>
            <value>
                <fullName>OEM Quadro Elite</fullName>
            </value>
            <value>
                <fullName>OEM Quadro Preferred</fullName>
            </value>
            <value>
                <fullName>OEM Tesla Elite</fullName>
            </value>
            <value>
                <fullName>OEM Tesla Preferred</fullName>
            </value>
            <value>
                <fullName>OEM vGPU Elite</fullName>
            </value>
            <value>
                <fullName>OEM vGPU Preferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>