force-app/main/default/objects/Data_Validation_Master_Data__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <label>Program Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Inception Partner</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Solution Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>