force-app/main/default/objects/Data_Validation_Master_Data__c/fields/UserType__c.field-meta.xml
<CustomField>
    <fullName>UserType__c</fullName>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PowerPartner</fullName>
            </value>
            <value>
                <fullName>PowerCustomerSuccess</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>